// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/TIME.proto";
import "./Pus013Ldt.proto";


package pusGroundModel.protobuf;

message Pus013DownlinkLdt {
extensions 5 to 105;

  optional ccsds_mal.protobuf.BOOLEAN receptionTimerArmed = 1;
  optional ccsds_mal.protobuf.TIME receptionTimerDeadline = 2;
  optional ccsds_mal.protobuf.LONG groundDate = 3;
  optional pusGroundModel.protobuf.Pus013Ldt pus013Ldt = 4;
}
